# whatsapp-clone-ui/src/app/services/models/message-response.ts
@@ -3,12 +3,15 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 import { MediaContentResponse } from '../models/media-content-response';
+import { RepliedMessage } from '../models/replied-message';
 export interface MessageResponse {
   content?: string;
   createdAt?: string;
+  forwarded?: boolean;
   id?: number;
   mediaList?: Array<MediaContentResponse>;
+  repliedMessage?: RepliedMessage;
   senderId?: string;
-  state?: 'SENT' | 'SEEN';
+  state?: 'SENT' | 'RECEIVED' | 'SEEN';
   type?: 'TEXT' | 'MEDIA' | 'AUDIO';
 }
