# whatsapp-clone-ui/src/app/services/models/replied-message.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface RepliedMessage {
+  content?: string;
+  id?: number;
+  messageType?: 'TEXT' | 'MEDIA' | 'AUDIO';
+}
