# whatsapp-clone-ui/src/openapi/openapi.json
@@ -1,9 +1,17 @@
 {
   "openapi": "3.1.0",
+  "info": {
+    "title": "API Documentation"
+  },
   "servers": [
     {
       "url": "http://localhost:8080/core",
       "description": "Core API via Gateway"
+    }
+  ],
+  "security": [
+    {
+      "keycloak": []
     }
   ],
   "paths": {
@@ -26,27 +34,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "message-controller"
-        ],
-        "operationId": "setMessagesToSeen",
-        "parameters": [
-          {
-            "name": "chatId",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "202": {
-            "description": "Accepted"
           }
         }
       }
@@ -146,6 +133,16 @@
           "user-controller"
         ],
         "operationId": "getUsers",
+        "parameters": [
+          {
+            "name": "q",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -249,11 +246,18 @@
           "chatId": {
             "type": "string"
           },
+          "repliedMessageId": {
+            "type": "integer",
+            "format": "int64"
+          },
           "mediaResources": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/MediaUploadResource"
             }
+          },
+          "forwarded": {
+            "type": "boolean"
           }
         }
       },
@@ -355,6 +359,7 @@
             "type": "string",
             "enum": [
               "SENT",
+              "RECEIVED",
               "SEEN"
             ]
           },
@@ -365,11 +370,37 @@
             "type": "string",
             "format": "date-time"
           },
+          "repliedMessage": {
+            "$ref": "#/components/schemas/RepliedMessage"
+          },
           "mediaList": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/MediaContentResponse"
             }
+          },
+          "forwarded": {
+            "type": "boolean"
+          }
+        }
+      },
+      "RepliedMessage": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "content": {
+            "type": "string"
+          },
+          "messageType": {
+            "type": "string",
+            "enum": [
+              "TEXT",
+              "MEDIA",
+              "AUDIO"
+            ]
           }
         }
       },
@@ -381,6 +412,9 @@
             "format": "uuid"
           },
           "name": {
+            "type": "string"
+          },
+          "imageUrl": {
             "type": "string"
           },
           "unreadCount": {
